# opentims

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md  pyproject.toml  rdocs.R  reinstall.sh  setup.cfg  setup.py
.github/scripts/: check_version.py
.github/workflows/: build_wheels.yml  publish.yml  run_tests.yml
Python/: __init__.py  hashing.py  iterators.py  opentims.py  slice_ops.py
Python/dev/: api.py  api_opentims.py  comparing_outputs.py  get_data.py  matteo.py  testing_on_server.py  tof2mz.py  tof_calibration.py
R/: DESCRIPTION  NAMESPACE
R/R/: RcppExports.R  opentims.R
R/R/tests/: check_all_versions_of_dll.R  getting_data.R
R/man/: MS1.Rd  MS2.Rd  OpenTIMS-class.Rd  OpenTIMS.Rd  download_bruker_proprietary_code.Rd  explore.tdf.tables.Rd  length-OpenTIMS-method.Rd  peaks_per_frame_cnts.Rd  query.Rd  query_slice.Rd  range-OpenTIMS-method.Rd  rt_query.Rd  rts.Rd  setup_bruker_so.Rd  sub-OpenTIMS-method.Rd  table2df.Rd  tables_names.Rd
R/src/: RcppExports.cpp  Rinterface.cpp  bruker.h  mio.h  opentims.cpp  opentims_types.h  platform.h  platform_os.h  scan2drift_converter.cpp  scan2drift_converter.h  so_manager.h  sqlite  tof2mz_converter.cpp  tof2mz_converter.h  zstd
cmake/: opentims.pc.in  opentimsConfig.cmake.in
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  opentimspy.html  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  modules.rst.txt  opentimspy.rst.txt
docs/opentims++/: Doxyfile  mainpage++.md
docs/opentims++/html/: annotated.html  classTimsDataHandle-members.html  classTimsDataHandle.html  classTimsFrame-members.html  classTimsFrame.html  classes.html  dir_58b0af57c101d586ec15999d26232799.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  opentims_8h_source.html
docs/opentims++/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
examples/: Makefile  get_data.R  get_data.cpp  get_data.py  tims_to_df.cpp
opentims/: Makefile  bruker.h  converter.cpp  converter.h  opentims.cpp  opentims.h  opentims_pybind11.cpp  platform.h  platform_os.h  scan2drift_converter.cpp  scan2drift_converter.h  so_manager.h  test.cpp  tof2mz_converter.h
opentims++/: Makefile  bruker.h  bruker_api.h  converters.cpp  converters.h  libopentims_py.cpp  opentims.cpp  opentims.h  opentims_all.cpp  opentims_all.h  opentims_pybind11.cpp  platform.h  scan2drift_converter.h  scan2inv_ion_mobility_converter.cpp  scan2inv_ion_mobility_converter.h  so_manager.cpp  so_manager.h  sqlite_helper.cpp  sqlite_helper.h  tensorization.cpp  test.cpp  thread_mgr.cpp  thread_mgr.h  tof2mz_converter.cpp  tof2mz_converter.h
opentimsj/: build.sbt
opentimsj/src/main/native/: Makefile  buildLinux.sh  timsj_TimsTOFExperimentReader.cpp  timsj_TimsTOFExperimentReader.h
opentimsj/src/main/scala/: Example.scala
opentimspy/: __init__.py  dimension_translations.py  misc.py  opentims++  opentims.py  plotting.py  sql.py
opentimspy/dev/: alternative_h5py_save_n_vaex.py  api.py  collecting_features.py  compare_cross_OS.py  get_data.py  minimal.py  scans_issue.py  sqlite_test.py  tof2mz2.py  tof_issu.py
opentimsr/: DESCRIPTION  NAMESPACE
opentimsr/R/: RcppExports.R  opentimsr.R
opentimsr/R/dev/: get_data.R
opentimsr/man/: CloseTIMS.Rd  MS1.Rd  OpenTIMS-class.Rd  download_bruker_proprietary_code.Rd  explore.tdf.tables.Rd  length-OpenTIMS-method.Rd  opentims_set_threads.Rd  peaks_per_frame_cnts.Rd  query.Rd  query_slice.Rd  range-OpenTIMS-method.Rd  retention_times.Rd  rt_query.Rd  rts.Rd  setup_bruker_so.Rd  sub-OpenTIMS-method.Rd  table2df.Rd  tables_names.Rd  tims_close.Rd
opentimsr/src/: RcppExports.cpp  Rinterface.cpp  bruker.h  bruker_api.h  converters.cpp  converters.h  mio.h  opentims.cpp  opentimsr_types.h  platform.h  platform_os.h  scan2drift_converter.cpp  scan2drift_converter.h  scan2inv_ion_mobility_converter.cpp  scan2inv_ion_mobility_converter.h  scan2ion_mobility_converter.cpp  so_manager.cpp  so_manager.h  sqlite  sqlite_cpl.c  thread_mgr.cpp  thread_mgr.h  tof2mz_converter.cpp  tof2mz_converter.h  zstd  zstddec_cpl.c
pytest/: test_api.py  test_bruker.py  test_conversion_method.py  test_load.py  test_opensource.py  test_read.py
pytest/test.d/: analysis.tdf  analysis.tdf_bin
scripts/: display_frame.py  extract_tdf.py  opentims_display_frame.py  opentims_extract_tdf.py  opentims_frame_sum.py  opentims_summary.py  opentims_verify.py
src/opentims++/: Makefile  bruker_api.h  converters.cpp  converters.h  opentims.cpp  opentims.h  opentims_all.cpp  opentims_pybind11.cpp  platform.h  platform_os.h  scan2inv_ion_mobility_converter.cpp  scan2inv_ion_mobility_converter.h  so_manager.cpp  so_manager.h  sqlite_helper.cpp  sqlite_helper.h  test.cpp  tof2mz_converter.cpp  tof2mz_converter.h
src/opentims++/zstd/: zstddeclib.c
src/opentimspy/: __init__.py  dimension_translations.py  misc.py  opentims.py  sql.py
src/opentimsr/: DESCRIPTION  LICENSE  NAMESPACE
src/opentimsr/R/: RcppExports.R  opentimsr.R
src/opentimsr/man/: OpenTIMS.Rd  download_bruker_proprietary_code.Rd  min_max_measurements.Rd  peaks_per_frame_cnts.Rd  query.Rd  rt_query.Rd  setup_bruker_so.Rd  setup_opensource.Rd
src/opentimsr/src/: Makevars.win  RcppExports.cpp  Rinterface.cpp  bruker_api.h  converters.cpp  converters.h  opentims.cpp  opentims_core  opentimsr_types.h  scan2inv_ion_mobility_converter.cpp  scan2inv_ion_mobility_converter.h  so_manager.cpp  so_manager.h  sqlite3_cpl.c  thread_mgr.cpp  tof2mz_converter.cpp  tof2mz_converter.h  zstddec_cpl.c
src/opentimsr/tests/: testthat.R
test/: getting_DDA_precursors.py  min_ex_getting_one_column.py  print_sqlite_backend.py  tensor.py  test.py  test_2.py  test_injection.py  test_speed.py
(+8 files in other folders)
